# sad_website

./: docker-compose.yml  index.html  package.json  pyproject.toml  readme.md  webpack.config.js
backend/: app.py
backend/app/: reason_app.py
frontend/: index.html  tsconfig.json  webpack.config.js
frontend/js/: bundle.js  main.js  main.js.map  rain.js.map
frontend/src/: drop.js.map  main.js.map  main.ts  rain.js.map  rain.ts
js/: bundle.js  drop.js  drop.js.map  main.js  main.js.map  rain.js  rain.js.map  utils.js  utils.js.map
src/: drop.ts  main.ts  rain.ts  utils.ts
